[package]
name = "h3o-polygon-conversion-crash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
h3o = { version = "0.3.1", features = ["geo", "serde"] }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
